# lotti-llm

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
configs/: finetune.yaml  model_small.yaml  model_tiny_debug.yaml  pretrain.yaml  pretrain_debug.yaml  tokenizer.yaml
notebooks/: 00_setup_check.ipynb
scripts/: round_trip_check.py
src/lottiegpt/data/: download.py  prepare_shards.py
src/lottiegpt/inference/: generate.py  validate_lottie.py
src/lottiegpt/model/: config.py  transformer.py
src/lottiegpt/tokenizer/: lottie_tokenizer.py  quantize.py  schema.py
src/lottiegpt/training/: dataset.py  eval.py  lr_schedule.py  pretrain.py
tests/: test_model_shapes.py  test_quantization.py  test_tokenizer_roundtrip.py
