[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lottiegpt"
version = "0.1.0"
description = "Small from-scratch transformer for learning and generating Lottie animations"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "sentencepiece>=0.2",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
